--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ nav {
 nav a {
   display: inline-block;
   padding-left: 15px;
+  padding-right: 10px;
   margin-left: 15px;
   line-height: 18px;
   color: #999;
@@ -215,3 +216,31 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen and (max-width: 980px) {
+  #masthead {
+    margin: 0 10px 30px 0;
+  }
+  body {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #masthead {
+    margin: 0 10px 30px 0;
+  }
+  body {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  #masthead {
+    position: static;
+    margin: 0 10px 30px 0;
+  }
+
+}
+
+
